<resources>
    <string name="app_name">ExpenseTRacker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="expense">Expense</string>
    <string name="toady">Toady</string>
    <string name="todo">TODO</string>
    <string name="show_list">Show list</string>
    <string name="statistics">Statistics</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="search">search</string>
    <string name="_0_00">0.00</string>
    <string name="amount_0_00">Amount: 0.00</string>
    <string name="today">Today</string>
    <string name="income">Income</string>
    <string name="amount">amount</string>
    <string name="note">note</string>
    <string name="ok">ok</string>
    <string name="category">Category</string>
    <string name="Amount">Amount</string>
    <string name="Note">Note</string>
    <string name="budget">Budget</string>
    <string name="Budget">Budget</string>
    <string name="BUDGET">BUDGET</string>
</resources>