<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:padding="5dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:elevation="5dp"
                    android:outlineProvider="none"
                    android:padding="4dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    app:drawableStartCompat="@drawable/ic_baseline_account_circle_24" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_calendar_today_24"/>
            </RelativeLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="#F0F0F0"
                android:elevation="50dp"
                android:outlineProvider="none"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:elevation="5dp"
                android:text="@string/expense"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:outlineProvider="none"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_money_off_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/layout_border"
                android:text="Today"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:text="0.00"
                android:textAlignment="center"
                android:id="@+id/Expense_amount"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Expense_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="true"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp" />

                <LinearLayout
                    android:id="@+id/linearlayoutexpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_add_circle_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add Expense"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
               android:textColor="@color/colorPrimary"
                android:elevation="5dp"
                android:text="@string/income"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_attach_money_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/layout_border"
                android:text="@string/today"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/_0_00"
                android:textAlignment="center"
                android:id="@+id/Income_Amount"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date"
                android:layout_marginBottom="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Income_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="true"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp" />

                <LinearLayout
                    android:id="@+id/linearlayoutinome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_add_circle_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add Income"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>